feat: pie chart 구현

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-native-gifted-charts": "^1.4.64",
+    "react-native-svg": "^15.14.0",
+    "react-router-dom": "^7.9.5",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
