--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.11",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.552.0",
     "prop-types": "^15.8.1",
