--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # API Base URL
-# 백엔드 API 서버 주소
-VITE_API_BASE_URL=http://localhost:8000
+# 개발 환경: /api (Vite 프록시 사용)
+# 프로덕션: https://econutriscore-backend.onrender.com
+VITE_API_BASE_URL=/api
